k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: html-svc
  namespace: devops-intermidate
spec:
  selector:
    app: html
  ports:
  - name: http
    port: 80
    targetPort: 80
