k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: html-ingress
  namespace: devops-intermidate
spec:
  rules:
    - host: bdg.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: html-svc
              port:
               number: 80
